<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onBoarding.screens.SixthScreen">

    <ImageView
        android:id="@+id/img_onBoarding_First"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/logo_de_la_app"
        android:src="@drawable/qr_code_init_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/onBoardingTitle6"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_onBoarding_First" />

    <Button
        android:id="@+id/btn_create_profile_init"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/on_boarding_btn_create_profile"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_reader_init"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:text="@string/on_boarding_btn_reader"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_profile_init"/>

</androidx.constraintlayout.widget.ConstraintLayout>