<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appFeatures.CodeViewer">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/code_view_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save_qr_code_view"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_save_code"
        android:textSize="20sp"
        app:backgroundTint="@color/green"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@drawable/ic_baseline_save_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_cancel_save_code"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_cancel"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_qr_code_view" />

    <ImageView
        android:id="@+id/img_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/text_img_qr_code_generated"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

</androidx.constraintlayout.widget.ConstraintLayout>